added usa hockey import

--- a/WebContent/mail/isusahockeynoloi.html
+++ b/WebContent/mail/isusahockeynoloi.html
@@ -11,7 +11,7 @@
 		<th colspan="2" align="center"><b>Information</b></th>
 	</tr>
 	<tr>
-		<td width="20%"><b>:CURRENTYTEAR: Team:</b></td>
+		<td width="20%"><b>2024 Team:</b></td>
 		<td align="left" colspan="5">:TEAMNAME:</td>
 	</tr>
 	<tr>
