changed label on manage rosters page to usa hockey confirmed.

--- a/WebContent/managerportal.xhtml
+++ b/WebContent/managerportal.xhtml
@@ -411,7 +411,7 @@
 			        </b:dataTableColumn>
 					<b:dataTableColumn styleClass="mtrxColumn">
 						<f:facet name="header">
-							Eligible
+							USAH Rstr Cnfrmd
 						</f:facet>
 						<h:outputText value="#{rosteredit.getSuspended()}" />
 					</b:dataTableColumn>
