cleaned up extra columns in player/coach loi hot lists and fix player/coach loi forms

--- a/WebContent/quickcoachloiconfirm.xhtml
+++ b/WebContent/quickcoachloiconfirm.xhtml
@@ -159,7 +159,7 @@
 							<f:selectItem itemLabel="Girls" itemValue="Girls" />
 						</b:selectMultiMenu>
 					</b:dataTableColumn>
-					<b:dataTableColumn orderable="false">
+					<!--<b:dataTableColumn orderable="false">
 						<f:facet name="header">
 							<h:outputText value="USA?" style="font-size:10px" />
 						</f:facet>
@@ -170,7 +170,7 @@
 							<f:selectItem itemLabel="Yes" itemValue="1"/>
 						</b:selectOneMenu>
 					</b:dataTableColumn>
-
+					-->
 					<b:dataTableColumn orderable="false">
 						<f:facet name="header">
 							<h:outputText value="Conf" style="font-size:10px" />
@@ -188,7 +188,7 @@
 							<f:selectItem itemLabel="Yes" itemValue="1"/>
 						</b:selectOneMenu>
 					</b:dataTableColumn>
-					<b:dataTableColumn >
+					<!--<b:dataTableColumn >
 						<f:facet name="header">
 							<h:outputText value="ABI" style="font-size:10px" />
 						</f:facet>
@@ -202,7 +202,7 @@
 							<f:selectItem itemLabel="No" itemValue="0"/>
 							<f:selectItem itemLabel="Yes" itemValue="1"/>
 						</b:selectOneMenu>
-					</b:dataTableColumn>
+					</b:dataTableColumn>-->
 					<b:dataTableColumn orderable="false">
 			            <f:facet name="header">
 							<h:outputText value="Option" style="font-size:10px" />
