--- a/WebContent/quickplayerloiconfirmnew.xhtml
+++ b/WebContent/quickplayerloiconfirmnew.xhtml
@@ -188,11 +188,10 @@
 								<f:selectItem itemLabel="Yes" itemValue="1"/>
 							</b:selectOneMenu>
 						</b:dataTableColumn>
-						<b:dataTableColumn >
+						<!--<b:dataTableColumn >
 							<f:facet name="header">
 								<h:outputText value="USA Rost?" style="font-size:10px" />
 							</f:facet>
-							<!--<h:outputText value="#{coach.getSuspended()}" />-->
 							<b:selectOneMenu value="#{player.usaroster}"
 											 large-screen="full-width"
 											 medium-screen="full-width"
@@ -203,14 +202,14 @@
 								<f:selectItem itemLabel="No" itemValue="0"/>
 								<f:selectItem itemLabel="Yes" itemValue="1"/>
 							</b:selectOneMenu>
-						</b:dataTableColumn>
+						</b:dataTableColumn>-->
 						<b:dataTableColumn >
 							<f:facet name="header">
 								<h:outputText value="Conf " style="font-size:10px" />
 							</f:facet>
 							<h:outputText value="#{player.confirmed}" style="font-size:10px"/>
 						</b:dataTableColumn>
-
+						<!--
 						<b:dataTableColumn >
 				            <f:facet name="header">
 								<h:outputText value="ABI " style="font-size:10px" />
@@ -225,7 +224,7 @@
 								<f:selectItem itemLabel="No" itemValue="0"/>
 								<f:selectItem itemLabel="Yes" itemValue="1"/>
 							</b:selectOneMenu>
-				        </b:dataTableColumn>
+				        </b:dataTableColumn>-->
 			        	<b:dataTableColumn >
 				            <f:facet name="header">
 						        <h:outputText value="Option" style="font-size:10px" />
