--- a/WebContent/workwithbirthcertificate.xhtml
+++ b/WebContent/workwithbirthcertificate.xhtml
@@ -84,13 +84,13 @@
 					</b:dataTableColumn>
 					<b:dataTableColumn >
 						<f:facet name="header">
-							<h:outputText value="2023 Team" style="font-size:10px" />
+							<h:outputText value="2024 Team" style="font-size:10px" />
 						</f:facet>
 						<h:outputText value="#{player.getCurrentteam()}" style="font-size:10px"/>
 					</b:dataTableColumn>
 					<b:dataTableColumn >
 						<f:facet name="header">
-							<h:outputText value="2022 Team" style="font-size:10px" />
+							<h:outputText value="2023 Team" style="font-size:10px" />
 						</f:facet>
 						<h:outputText value="#{player.getPreviousteam()}" style="font-size:10px"/>
 					</b:dataTableColumn>
@@ -191,6 +191,7 @@
 							<f:selectItem itemLabel="Yes" itemValue="1"/>
 						</b:selectOneMenu>
 					</b:dataTableColumn>
+					<!--
 					<b:dataTableColumn >
 						<f:facet name="header">
 							<h:outputText value="USA Rost?" style="font-size:10px" />
@@ -205,14 +206,14 @@
 							<f:selectItem itemLabel="No" itemValue="0"/>
 							<f:selectItem itemLabel="Yes" itemValue="1"/>
 						</b:selectOneMenu>
-					</b:dataTableColumn>
+					</b:dataTableColumn>-->
 					<b:dataTableColumn >
 						<f:facet name="header">
 							<h:outputText value="Conf" style="font-size:10px" />
 						</f:facet>
 						<h:outputText value="#{player.confirmed}" style="font-size:10px"/>
 					</b:dataTableColumn>
-					<b:dataTableColumn >
+					<!--<b:dataTableColumn >
 						<f:facet name="header">
 							<h:outputText value="ABI" style="font-size:10px" />
 						</f:facet>
@@ -226,7 +227,7 @@
 							<f:selectItem itemLabel="No" itemValue="0"/>
 							<f:selectItem itemLabel="Yes" itemValue="1"/>
 						</b:selectOneMenu>
-					</b:dataTableColumn>
+					</b:dataTableColumn>-->
 
 					<b:dataTableColumn >
 				            <f:facet name="header">
