--- a/WebContent/workwithcoaches.xhtml
+++ b/WebContent/workwithcoaches.xhtml
@@ -85,7 +85,7 @@
 					</b:dataTableColumn>
 			        <b:dataTableColumn orderable="false">
 			            <f:facet name="header">
-							<h:outputText value="2023 Team" style="font-size:10px" /><br></br>
+							<h:outputText value="2024 Team" style="font-size:10px" /><br></br>
 							<h:outputText value="Role" style="font-size:10px" />
 					    </f:facet>
 			            <h:outputText value="#{coach.getTeamname()}" style="font-size:10px"/><br></br>
@@ -188,6 +188,7 @@
 							<f:selectItem itemLabel="Girls" itemValue="Girls" />
 						</b:selectMultiMenu>
 			        </b:dataTableColumn>
+					<!--
 					<b:dataTableColumn orderable="false">
 						<f:facet name="header">
 							<h:outputText value="USA?" style="font-size:10px" />
@@ -199,7 +200,7 @@
 							<f:selectItem itemLabel="Yes" itemValue="1"/>
 						</b:selectOneMenu>
 					</b:dataTableColumn>
-
+					-->
 					<b:dataTableColumn orderable="false">
 			            <f:facet name="header">
 							<h:outputText value="Conf" style="font-size:10px" />
@@ -218,7 +219,7 @@
 							<f:selectItem itemLabel="Yes" itemValue="1"/>
 						</b:selectOneMenu>
 					</b:dataTableColumn>
-					<b:dataTableColumn >
+					<!--<b:dataTableColumn >
 						<f:facet name="header">
 							<h:outputText value="ABI" style="font-size:10px" />
 						</f:facet>
@@ -232,7 +233,7 @@
 							<f:selectItem itemLabel="No" itemValue="0"/>
 							<f:selectItem itemLabel="Yes" itemValue="1"/>
 						</b:selectOneMenu>
-					</b:dataTableColumn>
+					</b:dataTableColumn>-->
 					<b:dataTableColumn orderable="false">
 				            <f:facet name="header">
 								<h:outputText value="Option" style="font-size:10px" />
