--- a/WebContent/mail/changepassword.html
+++ b/WebContent/mail/changepassword.html
@@ -16,7 +16,7 @@ If it was you that made these changes.. well done!<p/>
 
 Best Regards,<p/>
 
-The iScaha Team.<br/>
-<a href='http://www.scaha.com/scaha'>SCAHA iSite</a>
+The Scaha Team.<br/>
+<a href='http://www.scaha.net/scaha'>SCAHA iSite</a>
 </body>
 </html>
