--- a/WebContent/registrarcoachlois.xhtml
+++ b/WebContent/registrarcoachlois.xhtml
@@ -81,7 +81,7 @@
 							</f:facet>
 							<h:outputText value="#{coach.suspended}"/>
 						</b:dataTableColumn>
-						<b:dataTableColumn style="font-size: 85%;">
+						<!--<b:dataTableColumn style="font-size: 85%;">
 				            <f:facet name="header">
 						        Safe sport
 						    </f:facet>
@@ -152,19 +152,19 @@
 								<h:outputText value="On USA Roster?"  />
 							</f:facet>
 							<h:outputText value="#{coach.getUsarosterdisplay()}" />
-						</b:dataTableColumn>
+						</b:dataTableColumn>-->
 						<b:dataTableColumn style="font-size: 85%;">
 				            <f:facet name="header">
 						        Notes
 						    </f:facet>
 							<h:outputText value="#{coach.notes}" />    
 				        </b:dataTableColumn>
-						<b:dataTableColumn style="font-size: 85%;">
+						<!--<b:dataTableColumn style="font-size: 85%;">
 							<f:facet name="header">
 								Bullying
 							</f:facet>
 							<h:outputText value="#{coach.isbullying}" />
-						</b:dataTableColumn>
+						</b:dataTableColumn>-->
 						<b:dataTableColumn style="font-size: 85%;">
 				            <f:facet name="header">
 						        <h:outputText value="Option" />
