--- a/WebContent/registrarviewlois.xhtml
+++ b/WebContent/registrarviewlois.xhtml
@@ -121,19 +121,19 @@
 						    </f:facet>
 							<h:outputText value="#{player.getUsamembership()}" />    
 				        </b:dataTableColumn>
-				        <b:dataTableColumn >
+				        <!--<b:dataTableColumn >
 				            <f:facet name="header">
 						        <h:outputText value="18U Safesport" />
 						    </f:facet>
 							<h:outputText value="#{player.getSafesport()}"/>    
-				        </b:dataTableColumn>
+				        </b:dataTableColumn>-->
 						<b:dataTableColumn >
 							<f:facet name="header">
-								<h:outputText value="Suspended" />
+								<h:outputText value="LOI Suspended" />
 							</f:facet>
 							<h:outputText value="#{player.suspended}"/>
 						</b:dataTableColumn>
-						<b:dataTableColumn >
+						<!--<b:dataTableColumn >
 							<f:facet name="header">
 								<h:outputText value="On USA Roster?" />
 							</f:facet>
@@ -150,7 +150,7 @@
 						        <h:outputText value="Bith Cert." />
 						    </f:facet>
 							<h:outputText value="#{player.birthcertificate}" />    
-				        </b:dataTableColumn>
+				        </b:dataTableColumn>-->
 				        <b:dataTableColumn hidden="lg md sm xs">
 				            <f:facet name="header">
 						        <h:outputText value="Email 1" />
@@ -170,12 +170,12 @@
 						    </f:facet>
 							<h:outputText value="#{player.notes}" />    
 				        </b:dataTableColumn>
-						<b:dataTableColumn >
+						<!--<b:dataTableColumn >
 							<f:facet name="header">
 								<h:outputText value="Bullying" />
 							</f:facet>
 							<h:outputText value="#{player.isbullying}" />
-						</b:dataTableColumn>
+						</b:dataTableColumn>-->
 				        <b:dataTableColumn >
 				            <f:facet name="header">
 						        <h:outputText value="Option" />
