--- a/WebContent/editroster.xhtml
+++ b/WebContent/editroster.xhtml
@@ -414,7 +414,7 @@
 					    </f:facet>
 			            <h:outputText value="#{coach.getActive()}" style="font-size:10px"/>
 			        </b:dataTableColumn>
-					<b:dataTableColumn orderable="false">
+					<!--<b:dataTableColumn orderable="false">
 						<f:facet name="header">
 							<h:outputText value="Safe Sport" style="font-size:10px" />
 						</f:facet>
@@ -494,6 +494,22 @@
 							<f:selectItem itemLabel="18U" itemValue="18U" />
 							<f:selectItem itemLabel="Girls" itemValue="Girls" />
 						</b:selectMultiMenu>
+					</b:dataTableColumn>-->
+					<b:dataTableColumn >
+						<f:facet name="header">
+							<h:outputText value="Confirm Date" style="font-size:10px" />
+						</f:facet>
+						<h:outputText value="#{coach.expirationdate}" style="font-size: 10px;"/>
+					</b:dataTableColumn>
+					<b:dataTableColumn >
+						<f:facet name="header">
+							<h:outputText value="Incl. Loi for Confirm" style="font-size:10px" />
+
+						</f:facet>
+						<b:commandButton value="Exclude" id="selectallloi" ajax="true" action="#{editrosterBean.setLOItoexclude(player)}" look="info" rendered="#{player.getConfirmbutton()}">
+							<f:ajax execute="@form" render="@form" update="@form"/>
+						</b:commandButton>
+						<h:outputText value="#{coach.confirm}" style="font-size: 10px;"/>
 					</b:dataTableColumn>
 					<b:dataTableColumn orderable="false">
 						<f:facet name="header">
@@ -508,7 +524,7 @@
 						</b:selectOneMenu>
 						<h:outputText value="#{player.getYesno(coach.suspend)}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG')}"/>
 					</b:dataTableColumn>
-					<b:dataTableColumn orderable="false">
+					<!--<b:dataTableColumn orderable="false">
 						<f:facet name="header">
 							<h:outputText value="Bullying" style="font-size:10px" />
 						</f:facet>
@@ -520,7 +536,7 @@
 							<f:selectItem itemLabel="Yes" itemValue="1"/>
 						</b:selectOneMenu>
 						<h:outputText value="#{coach.getIsbullying()}" style="font-size:10px" rendered="#{profileBean.hasRoleList('A-REG;S-VICE')}"/>
-					</b:dataTableColumn>
+					</b:dataTableColumn>-->
 					<b:dataTableColumn orderable="false">
 			            <f:facet name="header">
 							<h:outputText value="Updated" style="font-size:10px" />
